recursion.logo.lessons.recursion.logo.koch.Crab.scala.error
Crab:8: error: not found: value level
    crab(level-1,newLength)
         ^Crab:10: error: not found: value level
    crab(level-1,newLength)
         ^